--- a/package.json
+++ b/package.json
@@ -6,16 +6,27 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.0.0-rc.10",
+    "@storybook/addon-interactions": "^7.0.0-rc.10",
+    "@storybook/addon-links": "^7.0.0-rc.10",
+    "@storybook/blocks": "^7.0.0-rc.10",
+    "@storybook/react": "^7.0.0-rc.10",
+    "@storybook/react-vite": "^7.0.0-rc.10",
+    "@storybook/testing-library": "^0.0.14-next.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "prop-types": "^15.8.1",
+    "storybook": "^7.0.0-rc.10",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
