--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "chromatic": "^6.17.2",
     "prop-types": "^15.8.1",
     "storybook": "^7.0.0-rc.10",
     "typescript": "^4.9.3",
