--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet-async": "^1.3.0"
+    "react-helmet-async": "^1.3.0",
+    "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.0.0-rc.10",
