--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "chromatic": "chromatic --project-token=ccb7f963ae08"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
