--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.0.0-rc.10",
-    "@storybook/addon-interactions": "^7.0.0-rc.10",
+    "@storybook/addon-interactions": "^7.0.1",
     "@storybook/addon-links": "^7.0.0-rc.10",
     "@storybook/blocks": "^7.0.0-rc.10",
+    "@storybook/jest": "^0.0.11-next.2",
     "@storybook/react": "^7.0.0-rc.10",
     "@storybook/react-vite": "^7.0.0-rc.10",
     "@storybook/test-runner": "^0.10.0-next.12",
-    "@storybook/testing-library": "^0.0.14-next.1",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
