--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "prettier": "^2.0.2",
     "prop-types": "^15.8.1",
     "storybook": "^7.0.0-rc.10",
+    "storybook-addon-designs": "^7.0.0-beta.2",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
     "vite-plugin-eslint": "^1.8.1"
